# mcp-claude-context

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  DIRECT_API_USAGE.md  EXTENSION_GUIDE.md  PROJECT_SUMMARY.md  PUSH_CHECKLIST.md  README.md  SESSION_SUMMARY.md  USAGE_GUIDE.md  bootstrap.sh  check_installation.py  claude.json  discover_api.py  docker-compose.simple.yml  fetch_conversations.py  install_playwright.py  pyproject.toml  run.sh  run_direct.sh  run_direct_api.sh  run_mcp_server.sh  run_mcp_server_standalone.sh  run_server.py
.github/workflows/: ci.yml
deployment/: install.ps1  one-click-install.sh
deployment/desktop-extension/: manifest.json
deployment/docker/: .dockerignore  Dockerfile  docker-compose.yml
deployment/installer/: install.ps1  install.sh  (+1 more)
docs/: AGENT_INSTRUCTIONS.md  CONTINUATION_PROMPT.md  DEPLOYMENT.md  DEPLOYMENT_COMPARISON.md  DEPLOYMENT_GUIDE.md  MIGRATION_GUIDE.md  USAGE.md  UVX_DEPLOYMENT.md  bulk_export_rate_limiting.md  migration_rate_limiting.md  pypi_publishing_guide.md  rate_limiting.md  v0.5.0_RELEASE_NOTES.md  v0.5.0_implementation_summary.md
examples/: backup_all_conversations.py  conversation_analytics.py  daily_conversation_monitor.py  rate_limiting_example.py
extension/: README.md  background.js  bridge_server.py  content.js  content_old.js  dashboard.html  manifest.json  popup.html  popup.js  rateLimiter.js  test_extraction.js
scripts/: investigate_messages_api.py  migrate_to_v0.5.py  rate_limit_test_results.txt
src/: __init__.py  direct_api_server.py  server.py
tests/: test_direct_api.py  test_server.py
(+3 files in other folders)
